--- a/MvcCoreLinqXML/Views/Shared/_Layout.cshtml
+++ b/MvcCoreLinqXML/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Peliculas" asp-action="ListaPeliculas">Peliculas</a>
                         </li>
+                        <partial name="_MenuUsuariosPartial"/>
                     </ul>
                 </div>
             </div>
