--- a/MvcCoreLinqXML/Views/_ViewImports.cshtml
+++ b/MvcCoreLinqXML/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using MvcCoreLinqXML
 @using MvcCoreLinqXML.Models
+@using System.Security.Claims;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
